--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -6,14 +6,14 @@ bSubstepping=False
 bSubsteppingAsync=True
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/VehicleTemplate/Maps/VehicleExampleMap.VehicleExampleMap
+EditorStartupMap=/Game/GPCastle/Map/GPCastleMap.GPCastleMap
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/VehicleTemplate/Maps/VehicleExampleMap.VehicleExampleMap
+GameDefaultMap=/Game/GPCastle/Map/GPCastleMap.GPCastleMap
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Script/Engine.GameMode
 GlobalDefaultServerGameMode=None
