Setting the rules of the game + Event Dispatchers

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -15,7 +15,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/GPCastle/Map/GPCastleMap.GPCastleMap
 ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Script/Engine.GameMode
+GlobalDefaultGameMode=/Game/GPCastle/Framework/GM_RacingGame.GM_RacingGame_C
 GlobalDefaultServerGameMode=None
 
 [/Script/Engine.RendererSettings]
